; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_hostname_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_hostname_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TLSEXT_NAMETYPE_host_name = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"goodhost\00", align 1
@SSL_TLSEXT_ERR_OK = common dso_local global i32 0, align 4
@SSL_TLSEXT_ERR_NOACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*)* @hostname_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hostname_cb(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @TLSEXT_NAMETYPE_host_name, align 4
  %11 = call i8* @SSL_get_servername(i32* %9, i32 %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = call i64 @strcmp(i8* %15, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @SSL_TLSEXT_ERR_OK, align 4
  store i32 %19, i32* %4, align 4
  br label %22

20:                                               ; preds = %14, %3
  %21 = load i32, i32* @SSL_TLSEXT_ERR_NOACK, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i8* @SSL_get_servername(i32*, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
